--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,6 @@ body {font-family: Arial, Helvetica, sans-serif,}
 
 /* Style the navigation bar */
 nav {
-  font-family: system-ui;
-  background: #bd6a2a;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -39,7 +37,7 @@ nav a:hover {
 
 #best-cover-img {
   width: 200px;
-  height: 200px;
+  height: 300px;
   object-fit: cover;
 }
 
@@ -102,8 +100,8 @@ a:hover {
 
 /* Remove default button styles */
 button {
-  background-color: #fff;
-  border-radius: 5px;
+  background-color: transparent;
+  border: none;
   cursor: pointer;
 }
 
@@ -125,7 +123,7 @@ button {
 
 #modal-cover {
   width: 200px;
-  height: 200px;
+  height: 300px;
   object-fit: cover;
 }
 
@@ -140,7 +138,7 @@ footer {
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  background-color: #bd6a2a;
+  background-color: #333;
   color: #fff;
 }
 
