--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {font-family: Arial, Helvetica, sans-serif,}
+body {font-family: Crimson Pro, Roboto, sans-serif,}
 
 /* Style the navigation bar */
 nav {
