--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {font-family: Crimson Pro, Roboto, sans-serif,}
 /* Style the navigation bar */
 nav {
   display: flex;
-  background: #000000;
+  background-color: ##007bff;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
@@ -14,16 +14,26 @@ nav {
   width: 100px;
   height: 100px;
 }
-
+header {
+  background-color: #007bff;
+  padding: 10px 0;
+  color: #fff
+}
 /* Style the navigation links */
+
+
 nav a {
   margin-right: 1rem;
   padding: 0.5rem 1rem;
   border-radius: 5px;
 }
+.menu{
+  font-size: 36px;;
+  font-weight: bold;
 
+}
 nav a:hover {
-  background-color: #ffff;
+  background-color: #fff;
 }
 
 /* Style the "best" section */
@@ -63,6 +73,14 @@ nav a:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.search{
+  padding: 8px;
+  border: none;
+  border-radius: 4px;
+  width: 300px;
 }
 
 .carousel-prev,
@@ -81,7 +99,8 @@ nav a:hover {
 /* Set global font, background color, etc. */
 body {
   font-family: sans-serif;
-  background-color: #f5f5f5;
+  background-color: #007bff;
+  color: #333;
 }
 
 /* Set common styles for links */
@@ -98,7 +117,6 @@ a:hover {
 button {
   background-color: #ffe1ff;
   padding: 0.2rem;
-
   border-radius: 15px;
   cursor: pointer;
 }
