--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
-body {font-family: Crimson Pro, Roboto, sans-serif,}
+body {font-family: Netflix Sans, Roboto, sans-serif,}
 
 /* Style the navigation bar */
 nav {
   display: flex;
-  background-color: ##007bff;
+  background-color: #007bff;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
@@ -17,7 +17,7 @@ nav {
 header {
   background-color: #007bff;
   padding: 10px 0;
-  color: #fff
+  color: #007aef
 }
 /* Style the navigation links */
 
@@ -64,6 +64,7 @@ nav a:hover {
 /* Style the "top-rated" section and carousels */
 #top-rated-movies,
 .category1,
+position: absolute;
 .category2,
 .category3 {
   padding: 2rem;
@@ -75,6 +76,8 @@ nav a:hover {
   align-items: center;
   max-width: 1200px;
   margin: 0 auto;
+  flex-direction: row-reverse; /* Inverser la direction du carousel */
+
 }
 .search{
   padding: 8px;
@@ -112,15 +115,30 @@ a {
 a:hover {
   color: #007bff;
 }
+li {
+  list-style-type: none;
+  padding: 10px 0;
+  border-bottom: 1px solid rgb(216, 216, 216);
+}
 
+li span {
+  padding-right: 1em;
+}
 /* Remove default button styles */
 button {
   background-color: #ffe1ff;
+  text-align: center;
+  display: inline-block;
   padding: 0.2rem;
+	cursor: pointer;
+  transition: all 0.2s;
   border-radius: 15px;
   cursor: pointer;
+  box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.4);
 }
-
+button:hover {
+  filter: brightness(95%);
+}
 /* Hide the modal by default */
 .modal {
   display: none;
@@ -154,8 +172,8 @@ footer {
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  background-color: #000000;
-  color: #fff;
+  background-color: #007bff;
+  color: #007bff;
 }
 
 footer a {
