v 1 def. script js ok pour afficher films description apparente pour le best movies

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,9 @@ nav {
     border-radius: 5px; /* Coins arrondis */
     padding: 10px; /* Marge intérieure */
     margin-bottom: 20px; /* Marge inférieure */
+    width: 100%;
+    height: auto;
+
 }
 /* display flex avec gap 20px */
 .movies {
