--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ nav {
 /* display flex avec gap 20px */
 .movies {
     display: flex;
-    overflow-x: auto;
+    /* overflow-x: auto; */
     gap: 20px;
 }
 
@@ -89,4 +89,87 @@ nav {
     top: 10px;
     right: 10px;
     cursor: pointer;
+}
+button{
+    border: none;
+    cursor: pointer;
+    color: white;
+    background: red;
+    transition: all .3s ease-in-out;
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+}
+
+.carousel-view {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  padding: 44px 0;
+  transition: all 0.25s ease-in;
+}
+
+.carousel-view .item-list {
+  max-width: 950px;
+  width: 70vw;
+  padding: 50px 10px;
+  display: flex;
+  gap: 48px;
+  scroll-behavior: smooth;
+  transition: all 0.25s ease-in;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  overflow: auto;
+  scroll-snap-type: x mandatory;
+}
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.item-list::-webkit-scrollbar {
+  display: none;
+}
+
+.left,
+.right {
+  background = none;
+  cursor: pointer;
+}
+.left {
+    left = 0;
+}
+.right {
+  right = 0;
+}
+
+.bestImage {
+  scroll-snap-align: center;
+  min-width: 120px;
+  height: 120px;
+  background-color: deeppink;
+  border-radius:8px;
+}
+/* Styles pour le bouton "Haut de page" */
+.scroll-to-top {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 99;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+.scroll-to-top:hover {
+    background-color: #0056b3;
 }
