--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ nav {
 }
 h2 {
   text-align: center;
+  margin-left: 5px;
 }
 #logo {
   width: 100px; /* Ajuster la taille du logo */
@@ -31,50 +32,66 @@ h2 {
 
 .best-movies-container {
   position: relative;
-  text-align: left: 0;
-  /* display: flex; */
-  flex-flow: row wrap;
-  
-  height: 100%;
+  text-align:;
+  left: 0;
+  /*display: flex;
+  */height: 100%;
   margin-top: 10%;
   max-width: 10000px;
-  border-radius: 5px; /* Coins arrondis */
-  border: 5px solid black; /* Bordure avec liseré noir du container des films*/
+  border-radius: 5px;
+  /*Coinsarrondis*/border: 5px solid black;
+   /* Bordure avec liseré noir du container des films*/:;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 #best {
   width: 29%;
   height: 70%;
   margin: auto;
   position: absolute;
+  gap: calc(20px + 10%);
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   text-align: center;
   display:block;
-
-  -webkit-box-shadow: 0px 0px 7px 0px rgba(50, 50, 50, 0.75);
+  text-align: center;
+  /* -webkit-box-shadow: 0px 0px 7px 0px rgba(50, 50, 50, 0.75);
   -moz-box-shadow:    0px 0px 7px 0px rgba(50, 50, 50, 0.75);
-  box-shadow:         0px 0px 7px 0px rgba(50, 50, 50, 0.75);
+  box-shadow:         0px 0px 7px 0px rgba(50, 50, 50, 0.75); */
 }
-.bestCover-in-top
+/* .bestCover-in-top
 {
-    width:100%;
-    height:75%;
-    position: relative;
-    background: #AEEAAE;
-}
+    /* width:100%;
+    height:90%; */
+    /* position: relative;
+    background: #AEEAAE; */
+    /* position: absolute; */
+    /* top: 78.5px;
+    left: 20px;
+} */ */
 .bestCover-in-middle {
   display: flex;
   justify-content: center;
-  align-items: center;
-  background: #EAC5B3;
+  text-align: center;
+  vertical-align: middle;
+
+  /* align-items: center; */
+  /* background: #EAC5B3; */
 }
 #button_play {
-
-  font-size: 1.5em; /* Taille de la police augmentée */
-  padding: 15px 30px; /* Rembourrage plus grand */
-  border-radius: 5px; /* Coins arrondis */
+  font-size: 1.5em;
+  /*Tailledelapoliceaugmentée*/padding: 15px 30px;
+  /*Rembourrageplusgrand*/border-radius: 25px;
+   /* Coins arrondis */
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+  margin-left: 5px;
 }
 #button_play:hover {
   background-color: white;
@@ -83,17 +100,25 @@ h2 {
   margin-left: 5px;
  }
 #btn-best-movie {
-    /* width:100%;
+    /*width:100%;
     height:44%;
-    background: rgb(255, 38, 0); */
-    width: 150px; 
-    height: 50px; 
-    border-radius: 5px; 
+    background: rgb(255, 38, 0);
+    */width: 150px;
+    height: 50px;
+    border-radius: 25px;
     background-color: red;
     color: white;
-    font-size: 0.9em; 
+    font-size: 0.9em;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: 50px;
 }
 #btn-best-movie:hover {
   background-color: darkred;}
@@ -103,11 +128,20 @@ h2 {
   display: flex;
   /* overflow-x: auto; */
   gap: 20px;
+
 }
 #bestImage {
-    position: inherit;
-    justify-content: center;
-    align-items: center;
+    /* position: relative; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* vertical-align: left; */
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: 50px;
+    height: 250px;
+    display: block;
+
 }
 
 
@@ -171,11 +205,15 @@ h2 {
   cursor: pointer;
 }
 button{
-  border: none;
+  border-radius: 5px;
   cursor: pointer;
   color: white;
   background: red;
-  transition: all .3s ease-in-out;
+  transition:800ms ease all;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -ms-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
 }
 
 .container {
@@ -206,7 +244,6 @@ gap: 48px;
 scroll-behavior: smooth;
 transition: all 0.25s ease-in;
 -ms-overflow-style: none; /* IE and Edge */
-scrollbar-width: none; /* Firefox */
 overflow: auto;
 scroll-snap-type: x mandatory;
 }
@@ -219,14 +256,8 @@ display: none;
 
 .prev-btn*,
 .next-btn* {
-background = none;
+background : none;
 cursor: pointer;
-}
-.left {
-  left = 0;
-}
-.right {
-right = 0;
 }
 
 /* Styles pour le bouton "Haut de page" */
